--- a/index.html
+++ b/index.html
@@ -32,18 +32,26 @@
                     <h2>Vaibhav Gupta</h2>
                 </div>
                 <div class="col-lg-12 mt-2 c1">
-                    <div class="icon">
-                        <i class="fab fa-facebook-f"></i>
-                    </div>
-                    <div class="icon mx-2">
-                        <i class="fab fa-instagram"></i>
-                    </div>
-                    <div class="icon mx">
-                        <i class="fa-brands fa-github"></i>
-                    </div>
-                    <div class="icon mx-2">
-                        <i class="fab fa-linkedin-in"></i>
-                    </div>
+                    <a href="https://www.facebook.com/profile.php?id=100014676916343" target="_blank">
+                        <div class="icon">
+                            <i class="fab fa-facebook-f"></i>
+                        </div>
+                    </a>
+                    <a href="https://www.instagram.com/vaibhav_gupta.__/?hl=en" target="_blank">
+                        <div class="icon mx-2">
+                            <i class="fab fa-instagram"></i>
+                        </div>
+                    </a>
+                    <a href="https://github.com/Vaibhavgupta99" target="_blank">
+                        <div class="icon mx">
+                            <i class="fa-brands fa-github"></i>
+                        </div>
+                    </a>
+                    <a href="https://www.linkedin.com/in/vaibhav-gupta-960a18235" target="_blank">
+                        <div class="icon mx-2">
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-lg-12 mt-5">
                     <a href="#home">
