--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <div class="col-lg-7 cimg">
                     <div class="img_1 img_cc">
                         <div class="blur"></div>
-                        <div class="btn btn-primary group1 "><i class="fa-solid fa-link"></i></div>
+                        <a href="https://github.com/Vaibhavgupta99/Femprish" target="_blank"><div class="btn btn-primary group1 "><i class="fa-solid fa-link"></i></div></a>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -323,7 +323,7 @@
                 <div class="col-lg-7 cimg">
                     <div class="img_2 img_cc">
                         <div class="blur"></div>
-                        <div class="btn btn-primary group1 "><i class="fa-solid fa-link"></i></div>
+                        <a href="https://codec.fun/" target="_blank"><div class="btn btn-primary group1 "><i class="fa-solid fa-link"></i></div></a>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -332,7 +332,7 @@
                 <div class="col-lg-7 cimg">
                     <div class="img_3 img_cc">
                         <div class="blur"></div>
-                        <div class="btn btn-primary group1 "><i class="fa-solid fa-link"></i></div>
+                        <a href="https://github.com/Vaibhavgupta99/Anil_Provision_Store" target="_blank"><div class="btn btn-primary group1 "><i class="fa-solid fa-link"></i></div></a>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -341,7 +341,7 @@
                 <div class="col-lg-7 cimg">
                     <div class="img_4 img_cc">
                         <div class="blur"></div>
-                        <div class="btn btn-primary group1 "><i class="fa-solid fa-link"></i></div>
+                        <a href="https://github.com/Vaibhavgupta99/Previous_papers_pdf" target="_blank"><div class="btn btn-primary group1 "><i class="fa-solid fa-link"></i></div></a>
                     </div>
                 </div>
                 </div>
